--- a/samples/BlazorWebAssemblyOidcSample.Client/_Imports.razor
+++ b/samples/BlazorWebAssemblyOidcSample.Client/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Authentication;
 @using Microsoft.JSInterop
 @using BlazorWebAssemblyOidcSample.Client
 @using BlazorWebAssemblyOidcSample.Client.Shared
