Resolve refresh token time out error. Change AuthenticationException to TokenUnavailableException because ".NET 5.0: System.Net.Security is not supported on this platform."

--- a/samples/BlazorWebAssemblyOidcSample.Client/Pages/FetchData.razor
+++ b/samples/BlazorWebAssemblyOidcSample.Client/Pages/FetchData.razor
@@ -46,7 +46,7 @@ else
         {
             forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
         }
-        catch (AuthenticationException)
+        catch (TokenUnavailableException)
         {
             await OpenidConnectPkce.LoginAsync();
         }
